# app-multimodal-search-CLIP-PostgreSQL

./: .env_example  .gitignore  Dockerfile  README.md  app.py  compose-implicit-db.yaml  compose.vanilla-pg.yaml  compose.yaml  create_index.py  create_table.py  find_images.py  model_info.py  process_images.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
app/: app.py  process_images.py  pyproject.toml
clip_app/: Dockerfile  README.md  clip_app.py  download_model.py  pyproject.toml
query_app/: Dockerfile  README.md  create_table.py  find_images.py  process_images.py  pyproject.toml  query_app.py
query_app/templates/: index.html
setup_db/: Dockerfile  README.md  image_names.txt  pyproject.toml  setup_db.py
slides/: Makefile  README.md  justfile  notes.md  slides.typ  unused-slides.typ
templates/: images.html  index.html
